--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "minimal-typescript",
   "packageManager": "yarn@3.6.1",
   "scripts": {
-    "start": "node --loader esbuild-register/loader -r esbuild-register ./index.ts"
+    "start": "node -r esbuild-register ./index.ts"
   },
   "devDependencies": {
     "esbuild": "^0.18.11",
-    "esbuild-register": "^3.4.2"
+    "esbuild-register": "^3.4.2",
+    "typescript": "^5.1.6"
   }
 }
