--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
     "esbuild": "^0.18.11",
     "esbuild-register": "^3.4.2",
     "typescript": "^5.1.6"
+  },
+  "engines": {
+    "node": ">=20"
   }
 }
