--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "minimal-typescript",
   "packageManager": "yarn@3.6.1",
   "scripts": {
-    "start": "node -r esbuild-register ./index.ts"
+    "service": "node -r esbuild-register ./src/index.ts",
+    "web": "esbuild ./src/index.ts --outdir=web/js --bundle --servedir=web"
   },
   "devDependencies": {
     "esbuild": "^0.18.11",
