--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "packageManager": "yarn@3.6.1",
   "scripts": {
     "service": "node -r esbuild-register ./src/index.ts",
-    "web": "esbuild ./src/index.ts --outdir=web/js --bundle --servedir=web"
+    "web": "esbuild ./src/index.ts --outdir=web --bundle --watch --servedir=web"
   },
   "devDependencies": {
     "esbuild": "^0.18.11",
