--- a/package.json
+++ b/package.json
@@ -3,16 +3,21 @@
   "packageManager": "yarn@3.6.1",
   "type": "module",
   "scripts": {
-    "service": "node -r esbuild-register ./src/index.ts",
-    "web": "esbuild ./src/index.ts ./src/workers/* --format=esm --outdir=web --bundle --watch --servedir=web"
+    "web": "esbuild ./src/index.tsx --format=esm --outdir=web --bundle --watch --servedir=web"
   },
   "devDependencies": {
     "@types/audioworklet": "^0.0.48",
+    "@types/react": "^18.2.39",
+    "@types/react-dom": "^18.2.17",
     "esbuild": "^0.18.11",
     "esbuild-register": "^3.4.2",
-    "typescript": "^5.1.6"
+    "typescript": "^5.3.2"
   },
   "engines": {
     "node": ">=20"
+  },
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
