--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "devDependencies": {
     "@types/audioworklet": "^0.0.48",
+    "@types/meyda": "^4.3.8",
     "@types/react": "^18.2.39",
     "@types/react-dom": "^18.2.17",
     "esbuild": "^0.18.11",
@@ -17,6 +18,7 @@
     "node": ">=20"
   },
   "dependencies": {
+    "meyda": "^5.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
